[package]
name = "tls"
version = "0.1.0"
edition = "2018"

categories = ["no-std", "embedded"]

build = "build.rs"

[build-dependencies]
serde = { version = "^1.0.101", features = ["derive"] }
handlebars = "^3.5.4"

[dependencies]
r0 = "^1.0.0"
static_assertions = "^1.0.0"

[features]
unstable = []
